[gd_scene load_steps=5 format=3 uid="uid://vae7nqxekj24"]

[ext_resource type="Script" path="res://script/p_sword.gd" id="1_b12wl"]
[ext_resource type="Texture2D" uid="uid://d3j837kfxidcw" path="res://assets/sword1.png" id="1_l016k"]
[ext_resource type="Texture2D" uid="uid://cbw3h2gnv2lcp" path="res://assets/sword3.png" id="2_3f0em"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uoiur"]
radius = 11.0
height = 46.0

[node name="p_sword" type="Area2D"]
script = ExtResource("1_b12wl")

[node name="basic_sword_sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_l016k")
centered = false
offset = Vector2(-8, -15)
flip_h = true

[node name="basic_sword_coll" type="CollisionShape2D" parent="."]
position = Vector2(0, -28)
shape = SubResource("CapsuleShape2D_uoiur")

[node name="flamming_sword_sprite" type="Sprite2D" parent="."]
position = Vector2(-16, -34)
scale = Vector2(2, 2)
texture = ExtResource("2_3f0em")
centered = false
offset = Vector2(-8, -15)
flip_h = true

[node name="flamming_sword_coll" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -43)
polygon = PackedVector2Array(-2, -21, 2, -21, 2, -13, 4, -13, 4, -5, 6, -5, 6, -3, 8, -3, 8, -1, 6, -1, 6, 5, 8, 5, 8, 7, 10, 7, 10, 9, 8, 9, 8, 13, 10, 13, 10, 15, 12, 15, 12, 17, 10, 17, 10, 19, 8, 19, 8, 21, 6, 21, 6, 23, -4, 23, -6, 23, -6, 21, -8, 21, -8, 19, -10, 19, -10, 17, -12, 17, -12, 15, -10, 15, -10, 13, -8, 13, -8, 9, -10, 9, -10, 7, -8, 7, -8, 5, -6, 5, -6, -1, -8, -1, -8, -3, -6, -3, -6, -5, -4, -5, -4, -13, -2, -13, -2, -17, 0, -17, 0, -19, -2, -19)
